# pgessaysepub

./: .gitignore  CHANGELOG.md  LICENSE  README.md  USAGE.md  environment.yml  pg_to_epub.py  pyproject.toml  requirements.txt
.github/workflows/: build-epub.yml  ci.yml
docs/: index.html
pg_epub/: __init__.py  cache.py  config.py  epub_builder.py  parser.py  scraper.py  state.py
tests/: test_parser.py  test_state.py
