[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-essays-epub"
version = "1.0.0"
description = "Scrape Paul Graham's essays and compile them into a Kobo-friendly EPUB"
authors = [{name = "Tom Yan"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["epub", "paul-graham", "essays", "ebook", "kobo", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "ebooklib>=0.18",
    "lxml>=4.9.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/tomyanzhiyuan/pgessaysepub"
Repository = "https://github.com/tomyanzhiyuan/pgessaysepub"
Issues = "https://github.com/tomyanzhiyuan/pgessaysepub/issues"

[project.scripts]
pg-essays-epub = "pg_to_epub:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
py-modules = ["pg_to_epub"]
packages = ["pg_epub"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # Ignore line-too-long for regex patterns

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

